corrections to the cv

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -12,12 +12,12 @@
     </article>
     <article>
         <header>
-            <h1>Bachelors Degee in Business Information Technology</h1>
+            <h1>Bachelors Degree in Business Information Technology</h1>
             <span>Lahti University of Applied Sciences</span>
             <span><address>Lahti, Finland</address><time>2009 to 2014</time></span>
         </header>
         <p>
-            <em>Thesis:  Project Management Tools</em>
+            <em>Thesis:  Project Management Tools: JIRA </em>
         </p>
     </article>
 </section>
