--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,14 +6,22 @@
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Python</em>
+            &nbsp;&nbsp;<em>Python</em><em> &amp; </em><em>Git</em>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Microsoft Office</em><em> &amp; </em><em>Git</em>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Microsoft Office</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Bootstrap</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>React</em> &amp; <em>Javascript</em>
+        </p>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Matlab</em> &amp; <em>R</em>
         </p>
     </article>
 </section>
